--- a/KhelljyrVM/KhelljyrVM.csproj
+++ b/KhelljyrVM/KhelljyrVM.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KhelljyrCommon\KhelljyrCommon.csproj" />
+    <ProjectReference Include="..\KhelljyrCompiler\KhelljyrCompiler.csproj" />
     <ProjectReference Include="..\KhelljyrLibrary\KhelljyrLibrary.csproj" />
   </ItemGroup>
 
